Add existing file

--- a/index.html
+++ b/index.html
@@ -4,49 +4,44 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>All About Seton</title>
+	<title>Seton Raynor's Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" 
-	href="Basic-Portfolio/assets/css/style.css">
+	href="assets/css/style.css">
+	
 </head>
 
 <body>
-<container class="main-content">
-	<header>
-		<h1 id="header">Seton Raynor</h1>
-	<ol>
-		<li> <a href="index.html">About</li>
-		<li> <a href="portfolio.html">Portfolio</li>
-		<li> <a href="contact.html">Contact</li>
-	</ol>
-	</header>
-</container>
 
+<div id="header">
+	<h1 id="myName">Seton Raynor</h1>
+	<ul>
+		<li><div class="nav"><a href="portfolio.html">&nbsp;&nbsp;Portfolio</a></div></li>
+		<li><div class="nav"><a href="contact.html">&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
+		<li><div class="nav"><a href="index.html">About&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
+	</ul>
+</div>
 
-
-<container class="main-content">
-<div class="clearfix">
-<!--main-bio section needs to be in a box-->
-		<h1>About Me</h1>
-		<img id="picture" src="https://placehold.it/200x200" alt="Seton">
-<!--picture should float left within the box-->
-		<p>Seton is a full-stack developer who lives in Chapel Hill with her husband and her two cats. She attended University of North Carolina at Chapel Hill, earning a major in English Language and Literature. She has spent the last four years teaching high school in Sanford, N.C.</p>
+<div class="main-content">
+		<h1 id="aboutMe">About Me</h1>
+		<img id="picture" src="assets/images/Gotzenalm.jpg" alt="Seton">
+		<p class="bio">Seton is a full-stack developer who lives in Chapel Hill with her husband and her two cats. She attended University of North Carolina at Chapel Hill, earning a major in English Language and Literature. She has spent the last four years teaching high school in Sanford, N.C.</p>
 		<br>
-		<p>Seton's best skills include coding, writing, editing, and other communication. She is an avid reader and moviegoer.</p>
-</div>
-</container>
-
-<div class="connect">
-	<h2>Connect with Me</h2>
-	<img class="icons" src="Basic-Portfolio/assets/images/1487049656_linkedin.png">
-	<img class="icons" src="Basic-Portfolio/assets/images/1487049768_29.png">
-	<img class="icons" src="Basic-Portfolio/assets/images/1487049825_overflow.png">
+		<p class="bio">Seton's best skills include coding, writing, and editing. She is an avid reader and moviegoer.</p>
 </div>
 
-<footer class="site-footer">Copyright 2017 Seton Raynor</footer>
+<div class="connectBox1">
+	<h2 id="connectWithMe">Connect with Me</h2>
+	<a href="http://github.com/esetonraynor" target="_blank"><img class="icons" src="assets/images/1487049768_29.png" alt=""></a>
+	<a href="http://www.linkedin.com/in/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049656_linkedin.png" alt=""></a>
+	<a href="http://stackoverflow.com/users/7387900/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049825_overflow.png" alt=""></a>
+</div>
+
+<footer id="site-footer">&copy; Copyright 2017 Seton Raynor</footer>
 
 </body>
 
-
+</html>
 
 
 
