--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,8 @@
-<!--contact page-->
 <!DOCTYPE html>
 <html lang="en-us">
 
 <head>
-<meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<title>Seton Raynor's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" 
@@ -15,9 +14,9 @@
 <div id="header">
 	<h1 id="myName">Seton Raynor</h1>
 	<ul>
-		<li><div class="nav"><a href="portfolio.html">&nbsp;&nbsp;Portfolio</a></div></li>
-		<li><div class="nav"><a href="contact.html">&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
-		<li><div class="nav"><a href="index.html">About&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
+		<li><div class="nav-portfolio"><a href="portfolio.html">&nbsp;&nbsp;Portfolio</a></div></li>
+		<li><div class="nav-portfolio"><a href="contact.html">&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
+		<li><div class="nav-portfolio"><a href="index.html">About&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
 	</ul>
 </div>
 
@@ -35,7 +34,7 @@
 		<div id="rockPaper">Rock Paper Scissors</div>
 </div>
 		
-<div class="connectBox1">
+<div class="connectBox3">
 	<h2 id="connectWithMe">Connect with Me</h2>
 		<a href="http://github.com/esetonraynor" target="_blank"><img class="icons" src="assets/images/1487049768_29.png" alt=""></a>
 		<a href="http://www.linkedin.com/in/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049656_linkedin.png" alt=""></a>
