--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <div class="main-content">
 		<h1 id="aboutMe">About Me</h1>
 		<img id="picture" src="assets/images/Gotzenalm.jpg" alt="Seton">
-		<p class="bio">Seton is a full-stack developer who lives in Chapel Hill with her husband and her two cats. She attended University of North Carolina at Chapel Hill, earning a major in English Language and Literature. She has spent the last four years teaching high school in Sanford, N.C.</p>
+		<p class="bio">Seton is a soon-to-be full-stack developer who lives in Chapel Hill with her husband and her two cats. She attended University of North Carolina at Chapel Hill, where she earned a Bachelor's in English Language and Literature. She has spent the last four years teaching high school in Sanford, N.C. Teaching has definitely been a great learning experience, but she's ready for something different.</p>
 		<br>
-		<p class="bio">Seton's best skills include coding, writing, and editing. She is an avid reader and moviegoer.</p>
+		<p class="bio">Seton's best skills include coding, writing, and editing. She is an avid reader and moviegoer. She would somehow love to combine all these interests into one fabulous career in web development!</p>
 </div>
 
 <div class="connectBox1">
@@ -36,7 +36,7 @@
 	<a href="http://stackoverflow.com/users/7387900/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049825_overflow.png" alt=""></a>
 </div>
 
-<footer id="site-footer">&copy; Copyright 2017 Seton Raynor</footer>
+<footer id="site-footer">&copy;Copyright 2017 Seton Raynor</footer>
 
 </body>
 
