--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
 
 <div class="main-content-portfolio clearfix">
 	<h1 id="portfolioHeading">Portfolio</h1>
+	<hr id="line1">
 	<img class="projects" src="assets/images/business1.png" alt="">
 	<img class="projects" src="assets/images/city1.png" alt="">
 	<img class="projects" src="assets/images/technics1.png" alt="">		
@@ -36,6 +37,7 @@
 		
 <div class="connectBox3">
 	<h2 id="connectWithMe">Connect with Me</h2>
+		<hr>
 		<a href="http://github.com/esetonraynor" target="_blank"><img class="icons" src="assets/images/1487049768_29.png" alt=""></a>
 		<a href="http://www.linkedin.com/in/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049656_linkedin.png" alt=""></a>
 		<a href="http://stackoverflow.com/users/7387900/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049825_overflow.png" alt=""></a>
