--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
 
 <div class="main-content-contact clearfix">
 	<h1 id="contactHeader">Contact</h1>
+	<hr id="line1">
 	<p class="response">Name</p>
 	<textarea name="yourName" id="nameBox">John Doe</textarea>
 	<p class="response">Email</p>
@@ -30,11 +31,12 @@
 	<textarea name="message" id="messageBox">Your message here.</textarea>
 	<br>
 	<br>
-	<button id="submit">Submit</button>
+	<button id="submit" href="#">Submit</button>
 </div>
 		
 <div class="connectBox2">
 	<h2 id="connectWithMe">Connect with Me</h2>
+		<hr>
 		<a href="http://github.com/esetonraynor" target="_blank"><img class="icons" src="assets/images/1487049768_29.png" alt=""></a>
 		<a href="http://www.linkedin.com/in/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049656_linkedin.png" alt=""></a>
 		<a href="http://stackoverflow.com/users/7387900/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049825_overflow.png" alt=""></a>
