--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <div class="main-content">
 		<h1 id="aboutMe">About Me</h1>
+		<hr id="line1">
 		<img id="picture" src="assets/images/Gotzenalm.jpg" alt="Seton">
 		<p class="bio">Seton is a soon-to-be full-stack developer who lives in Chapel Hill with her husband and her two cats. She attended University of North Carolina at Chapel Hill, where she earned a Bachelor's in English Language and Literature. She has spent the last four years teaching high school in Sanford, N.C. Teaching has definitely been a great learning experience, but she's ready for something different.</p>
 		<p class="bio">Seton's best skills include coding, writing, and editing. She is an avid reader and moviegoer. She would somehow love to combine all these interests into one fabulous career in web development!</p>
@@ -30,6 +31,7 @@
 
 <div class="connectBox1">
 	<h2 id="connectWithMe">Connect with Me</h2>
+	<hr>
 	<a href="http://github.com/esetonraynor" target="_blank"><img class="icons" src="assets/images/1487049768_29.png" alt=""></a>
 	<a href="http://www.linkedin.com/in/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049656_linkedin.png" alt=""></a>
 	<a href="http://stackoverflow.com/users/7387900/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049825_overflow.png" alt=""></a>
