--- a/portfolio.html
+++ b/portfolio.html
@@ -7,32 +7,112 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" 
 	href="assets/css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+	
+	<header id="masthead">
+	<div class="container">
+		<a href="index.html" id="logo">Seton Raynor</a>
+			<nav>
+				<a href="index.html">About</a>
+				<a href="portfolio.html">Portfolio</a>
+				<a href="contact.html">Contact</a>
+			</nav>
+	</div>
+	</header>
 
-<div id="header">
+<div id="main-container" class="container">
+	<section class="main-container">
+		<h1>Portfolio</h1>
+		
+		<div class="projects">
+			<img src="assets/images/business1.png" alt="hangman" class="pictures">
+			<h3>Hangman</h3>
+		</div>
+
+		<div class="projects">
+			<img src="assets/images/city1.png" alt="RPG Game" class="pictures">
+			<h3>RPG Game</h3>
+		</div>
+
+		<div class="projects">
+			<img src="assets/images/technics1.png" alt="Trivia Game" class="pictures">
+			<h3>Trivia Game</h3>
+		</div>
+
+		<div class="projects">
+			<img src="assets/images/technics2.png" alt="UNC Basketball" class="pictures">
+			<h3>UNC Basketball Stats App</h3>
+		</div>
+
+		<div class="projects">
+			<img src="assets/images/technics3.png" alt="Rock Paper Scissors" class="pictures">
+			<h3>Rock Paper Scissors</h3>
+
+	</section>
+
+	<section class="sidebar">
+		<div id="connect">
+			<h2>Connect with Me</h2>
+			
+			<a href="http://github.com/esetonraynor" target="_blank"><img class="icons" src="assets/images/1487049768_29.png" alt=""></a>
+			<a href="http://www.linkedin.com/in/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049656_linkedin.png" alt=""></a>
+			<a href="http://stackoverflow.com/users/7387900/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049825_overflow.png" alt=""></a>
+		</div>
+	</section>
+
+</div><!--End of main-container!-->
+
+<footer>
+	<div class="container">&copy;Copyright 2017 Seton Raynor</div>
+</footer>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<div id="header">
 	<h1 id="myName">Seton Raynor</h1>
 	<ul>
-		<li><div class="nav-portfolio"><a href="portfolio.html">&nbsp;&nbsp;Portfolio</a></div></li>
-		<li><div class="nav-portfolio"><a href="contact.html">&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
-		<li><div class="nav-portfolio"><a href="index.html">About&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
+		<li><div class="nav-portfolio port"><a href="portfolio.html">&nbsp;&nbsp;Portfolio</a></div></li>
+		<li><div class="nav-portfolio cont"><a href="contact.html">&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
+		<li><div class="nav-portfolio about"><a href="index.html">About&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
 	</ul>
 </div>
 
 <div class="main-content-portfolio clearfix">
 	<h1 id="portfolioHeading">Portfolio</h1>
 	<hr id="line1">
-	<img class="projects" src="assets/images/business1.png" alt="">
-	<img class="projects" src="assets/images/city1.png" alt="">
-	<img class="projects" src="assets/images/technics1.png" alt="">		
-	<img class="projects" src="assets/images/technics2.png" alt="">
-	<img class="projects" src="assets/images/technics3.png" alt="">
-		<div id="hangman">Hangman</div>
-		<div id="rpgGame">RPG Game</div>
-		<div id="triviaGame">Trivia Game</div>
-		<div id="basketball">UNC Basketball Statistics App</div>
-		<div id="rockPaper">Rock Paper Scissors</div>
+	<div id="hangman"><img class="projects" src="assets/images/business1.png" alt="">Hangman</div>
+	<div id="rpgGame"><img class="projects" src="assets/images/city1.png" alt="">RPG Game</div>
+	<div id="triviaGame"><img class="projects" src="assets/images/technics1.png" alt="">Trivia Game</div>
+	<div id="basketball"><img class="projects" src="assets/images/technics2.png" alt="">UNC Basketball Stats App</div>
+	<div id="rockPaper"><img class="projects" src="assets/images/technics3.png" alt="">Rock Paper Scissors</div>
 </div>
 		
 <div class="connectBox3">
