--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
 				</li>
 				<li>
 					<label for="message">Message</label>
-					<textarea type="text" name="message" id="message" placeholder="Your message here." required="required"></textarea>
+					<textarea name="message" id="message" placeholder="Your message here." required="required"></textarea>
 				</li>
 			</ul>
-		<button id="submit" href="#">Submit</button>
+		<button id="submit">Submit</button>
 		</form>
 
 	</section>
@@ -57,7 +57,7 @@
 		</div>
 	</section>
 
-</div><!--End of main-container!-->
+</div>
 
 <footer>
 	<div class="container">&copy;Copyright 2017 Seton Raynor</div>
@@ -67,66 +67,3 @@
 </html>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--<div id="header">
-	<h1 id="myName">Seton Raynor</h1>
-	<ul>
-		<li><div class="nav port"><a href="portfolio.html">&nbsp;&nbsp;Portfolio</a></div></li>
-		<li><div class="nav cont"><a href="contact.html">&nbsp;&nbsp;Contact&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
-		<li><div class="nav about"><a href="index.html">About&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;</a></div></li>
-	</ul>
-</div>
-
-<div class="main-content-contact clearfix">
-	<h1 id="contactHeader">Contact</h1>
-	<hr id="line1">
-	<p class="response">Name</p>
-	<textarea name="yourName" id="nameBox">John Doe</textarea>
-	<p class="response">Email</p>
-	<textarea name="email-address" id="email">johndoe@yourmail.com</textarea>
-	<p class="response">Message</p>
-	<textarea name="message" id="messageBox">Your message here.</textarea>
-	<br>
-	<br>
-	<button id="submit" href="#">Submit</button>
-</div>
-		
-<div class="connectBox2">
-	<h2 id="connectWithMe">Connect with Me</h2>
-		<hr>
-		<a href="http://github.com/esetonraynor" target="_blank"><img class="icons" src="assets/images/1487049768_29.png" alt=""></a>
-		<a href="http://www.linkedin.com/in/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049656_linkedin.png" alt=""></a>
-		<a href="http://stackoverflow.com/users/7387900/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049825_overflow.png" alt=""></a>
-</div>
-
-<footer id="site-footer">&copy;Copyright 2017 Seton Raynor</footer>
-
-</body>
-
-</html>
