--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div id="connect">
 			<h2>Connect with Me</h2>
 			
-			<a href="http://github.com/esetonraynor" target="_blank"><img class="icons" src="assets/images/1487049768_29.png" alt=""></a>
+			<a href="http://github.com/setonr" target="_blank"><img class="icons" src="assets/images/1487049768_29.png" alt=""></a>
 			<a href="http://www.linkedin.com/in/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049656_linkedin.png" alt=""></a>
 			<a href="http://stackoverflow.com/users/7387900/seton-raynor" target="_blank"><img class="icons" src="assets/images/1487049825_overflow.png" alt=""></a>
 		</div>
